changed the percenteges in musical staff inline css to avoid overlapping with piano keys

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -92,7 +92,7 @@ p {
   opacity: 0.4;
   text-align: center;
   font-weight: 700;
-  font-size: 2vw;
+  font-size: 3vmin;
 }
 
 .Key.on.active .color-key {
